[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/—Pngtree—dark clouds_641705.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/EnemyClouds.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.2791, 47.4344 )

[sub_resource type="CircleShape2D" id=2]
radius = 610.82

[node name="EnemyClouds" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.215262, 0.276149 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9.18851 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
